fix: fix text color dark mode card daily xp

--- a/client/src/styles/FingoCardDailyXP.styles.css
+++ b/client/src/styles/FingoCardDailyXP.styles.css
@@ -65,8 +65,12 @@
 .FingoCardDailyXPInner p {
     margin-bottom: 0;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 15px;
     color: #333;
+}
+
+[data-theme='dark'] .FingoCardDailyXPInner p {
+    color: #c4c4c4;
 }
 
 .FingoCardDailyXPInner .right {
